tests/rustdoc-ui/issues/issue-61732.stderr
error[E0433]: cannot find item `mod` in this scope
  --> $DIR/issue-61732.rs:3:15
   |
LL | pub(in crate::r#mod) fn main() {}
   |               ^^^^^ unresolved import

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
