tests/rustdoc-ui/issues/issue-61732.rs
// This previously triggered an ICE.

pub(in crate::r#mod) fn main() {}
//~^ ERROR cannot find item `mod`
